# C64_Raycaster_prototype

./: .gitignore  CMakeLists.txt  README.md
src/: Angle.cpp  Angle.h  CMakeLists.txt  GameMap.h  LookUpTables.cpp  LookUpTables.h  Player.cpp  Player.h  Ray.cpp  Ray.h  Raycaster.cpp  Raycaster.h  lutGenerators.cpp  lutGenerators.h  main.cpp
tst/: Angle_test.cpp  Player_test.cpp  dummy.cpp  testCustomDefinitions.h
